--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,6 +9,20 @@
   </head>
 
   <body>
+
+    <nav>
+      <ul>
+        <li><%= link_to "Home", root_path %></li>
+        <li><%= link_to "About", simple_pages_index_path %></li>
+        <li><%= link_to "Contact", simple_pages_index_path %></li>
+      </ul>
+    </nav>
+
     <%= yield %>
+
+    <footer>
+      &copy; 2018 Asian Eyewear
+    </footer>
+
   </body>
 </html>
