--- a/app/views/simple_pages/index.html.erb
+++ b/app/views/simple_pages/index.html.erb
@@ -1,2 +1,4 @@
 <h1>Asian Eyewear</h1>
-<h2>Your source for glasses that are specially designed to fit Asian faces</h2>
+<h2>Your source for glasses that are specially designed to fit Asian faces.</h2>
+
+<%= image_tag("henri-pham-356887-unsplash.jpg", class: "img-responsive") %>
