--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -8,6 +8,8 @@
       <th>Name</th>
       <th>Description</th>
       <th>Image url</th>
+      <th>Color</th>
+      <th>Price</th>
       <th colspan="3"></th>
     </tr>
   </thead>
@@ -18,6 +20,8 @@
         <td><%= product.name %></td>
         <td><%= product.description %></td>
         <td><%= product.image_url %></td>
+        <td><%= product.color %></td>
+        <td><%= product.price %></td>
         <td><%= link_to 'Show', product %></td>
         <td><%= link_to 'Edit', edit_product_path(product) %></td>
         <td><%= link_to 'Destroy', product, method: :delete, data: { confirm: 'Are you sure?' } %></td>
@@ -25,6 +29,20 @@
     <% end %>
   </tbody>
 </table>
+
+<div class="container-fluid">
+  <div class="row">
+    <%= @products.each do |product| %>
+      <div class="col-sm-2 col-md-3">
+        <%= image_tag(product.image_url, class: "img-responsive") %>
+        <a href="#"><h1><%= product.name %></h1></a>
+        <p><%= product.description %></p>
+        <p><%= product.color %></p>
+        <strong>$<%= product.price %></strong>
+      </div>
+    <% end %>
+  </div>
+</div>
 
 <br>
 
