--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -32,7 +32,7 @@
 
 <div class="container-fluid">
   <div class="row">
-    <%= @products.each do |product| %>
+    <% @products.each do |product| %>
       <div class="col-sm-2 col-md-4">
         <%= image_tag(product.image_url, class: "img-responsive", id: "product-image") %>
         <a href="#"><h1><%= product.name %></h1></a>
@@ -50,4 +50,4 @@
 
 <br>
 
-<!--<%= link_to 'New Product', new_product_path %>-->
+<%= link_to 'New Product', new_product_path %>
