--- a/app/views/products/_product.html.erb
+++ b/app/views/products/_product.html.erb
@@ -1,1 +1,17 @@
-<%= render @products %>
+<div class="container-fluid">
+  <div class="row">
+    <% @products.each do |product| %>
+      <div class="col-sm-2 col-md-4">
+        <%= image_tag(product.image_url, class: "img-responsive", id: "product-image") %>
+        <a href="#"><h1><%= product.name %></h1></a>
+        <p><%= product.description %></p>
+        <p><%= product.color %></p>
+        <strong>$<%= product.price %></strong>
+        <br>
+        <%= link_to 'Show', product %>
+        <%= link_to 'Edit', edit_product_path(product) %>
+        <%= link_to 'Destroy', product, method: :delete, data: { confirm: 'Are you sure?' } %>
+      </div>
+    <% end %>
+  </div>
+</div>
