--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -2,52 +2,6 @@
 
 <h1>Products</h1>
 
-<!--<table>
-  <thead>
-    <tr>
-      <th>Name</th>
-      <th>Description</th>
-      <th>Image url</th>
-      <th>Color</th>
-      <th>Price</th>
-      <th colspan="3"></th>
-    </tr>
-  </thead>
-
-  <tbody>
-    <% @products.each do |product| %>
-      <tr>
-        <td><%= product.name %></td>
-        <td><%= product.description %></td>
-        <td><%= product.image_url %></td>
-        <td><%= product.color %></td>
-        <td><%= product.price %></td>
-        <td><%= link_to 'Show', product %></td>
-        <td><%= link_to 'Edit', edit_product_path(product) %></td>
-        <td><%= link_to 'Destroy', product, method: :delete, data: { confirm: 'Are you sure?' } %></td>
-      </tr>
-    <% end %>
-  </tbody>
-</table>-->
-
-<div class="container-fluid">
-  <div class="row">
-    <% @products.each do |product| %>
-      <div class="col-sm-2 col-md-4">
-        <%= image_tag(product.image_url, class: "img-responsive", id: "product-image") %>
-        <a href="#"><h1><%= product.name %></h1></a>
-        <p><%= product.description %></p>
-        <p><%= product.color %></p>
-        <strong>$<%= product.price %></strong>
-        <br>
-        <%= link_to 'Show', product %>
-        <%= link_to 'Edit', edit_product_path(product) %>
-        <%= link_to 'Destroy', product, method: :delete, data: { confirm: 'Are you sure?' } %>
-      </div>
-    <% end %>
-  </div>
-</div>
-
 <br>
-
+<%= render @products %>
 <%= link_to 'New Product', new_product_path %>
