--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -2,6 +2,10 @@
 
 <h1>Products</h1>
 
-<br>
-<%= render @products %>
+<div class="container-fluid">
+  <div class="row">
+    <%= render @products %>
+  </div>
+</div>
+
 <%= link_to 'New Product', new_product_path %>
