--- a/app/views/simple_pages/index.html.erb
+++ b/app/views/simple_pages/index.html.erb
@@ -2,3 +2,11 @@
 <h2>Your source for glasses that are specially designed to fit Asian faces.</h2>
 
 <%= image_tag("henri-pham-356887-unsplash.jpg", class: "img-responsive") %>
+
+<br>
+
+<%= link_to 'Products', products_path %><br>
+<%= link_to 'Orders', orders_path %><br>
+<%= link_to 'Featured Products', simple_pages_landing_page_path %><br>
+
+<br>
