--- a/app/assets/stylesheets/products.scss
+++ b/app/assets/stylesheets/products.scss
@@ -4,3 +4,12 @@
 #product-image {
   height: 200px;
 }
+
+#submit_button {
+  background-color: lightblue;
+}
+
+.field {
+  font-size: 15px;
+  color: blue;
+}
