--- a/app/assets/stylesheets/simple_pages.scss
+++ b/app/assets/stylesheets/simple_pages.scss
@@ -27,8 +27,14 @@ h1 {
 }
 
 /**** Body ****/
-p, h2 {
+p {
   margin: 40px;
+}
+
+h2 {
+  font-family: Aclonica, sans-serif;
+  color: #777777;
+  margin-left: 40px;
 }
 
 /**** Footer ****/
