--- a/app/views/products/_product.html.erb
+++ b/app/views/products/_product.html.erb
@@ -1,8 +1,8 @@
 <div class="col-sm-2 col-md-4">
   <%= image_tag(product.image_url, class: "img-responsive", id: "product-image") %>
-  <a href="#"><h1><%= product.name %></h1></a>
-  <p><%= product.description %></p>
-  <p><%= product.color %></p>
+  <a href="#"><h2><%= product.name %></h2></a>
+  <h5><%= product.description %></h5>
+  <h5><%= product.color %></h5>
   <strong>$<%= product.price %></strong>
   <br>
   <%= link_to 'Show', product %>
