--- a/app/assets/stylesheets/simple_pages.scss
+++ b/app/assets/stylesheets/simple_pages.scss
@@ -37,6 +37,17 @@ h2 {
   margin-left: 40px;
 }
 
+/**** Contact Page ****/
+.form-group {
+  width: 300px;
+  text-align: center;
+  margin-left: 40px;
+}
+
+.form_label {
+  margin-left: 25px;
+}
+
 /**** Footer ****/
 .site-footer {
   height: 20px;
