--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -29,3 +29,6 @@
 
 <%= link_to 'Edit', edit_product_path(@product) %> |
 <%= link_to 'Back', products_path %>
+
+<%= @product.highest_rating_comment %>
+<%= @product.lowest_rating_comment %>
