--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -27,8 +27,12 @@
   <%= @product.price %>
 </p>
 
+<p>Average Rating: <div class="rated" data-score="<%= @product.average_rating %>"></div> </p>
+
 <%= link_to 'Edit', edit_product_path(@product) %> |
 <%= link_to 'Back', products_path %>
 
 <%= @product.highest_rating_comment %>
 <%= @product.lowest_rating_comment %>
+<%= render 'new_comment' %>
+<%= render 'comments' %>
