--- a/app/views/products/_form.html.erb
+++ b/app/views/products/_form.html.erb
@@ -12,31 +12,41 @@
   <% end %>
 
   <div class="field">
+    <div class="form-group">
     <%= form.label :name %>
-    <%= form.text_field :name, id: :product_name %>
+    <%= form.text_field :name, class: "form-control", placeholder: "Enter Product Name", id: :product_name %>
+    </div>
   </div>
 
   <div class="field">
+    <div class="form-group">
     <%= form.label :description %>
-    <%= form.text_area :description, id: :product_description %>
+    <%= form.text_area :description, class: "form-control", placeholder: "Enter Product Description", id: :product_description %>
+    </div>
   </div>
 
   <div class="field">
+    <div class="form-group">
     <%= form.label :image_url %>
-    <%= form.text_field :image_url, id: :product_image_url %>
+    <%= form.text_field :image_url, class: "form-control", placeholder: "Enter Product Image url", id: :product_image_url %>
+    </div>
   </div>
 
   <div class="field">
+    <div class="form-group">
     <%= form.label :color %>
-    <%= form.text_field :color, id: :product_color %>
+    <%= form.text_field :color, class: "form-control", placeholder: "Enter Product Color", id: :product_color %>
+    </div>
   </div>
 
   <div class="field">
+    <div class="form-group">
     <%= form.label :price %>
-    <%= form.text_field :price, id: :product_price %>
+    <%= form.text_field :price, class: "form-control", placeholder: "Enter Product Price", id: :product_price %>
+    </div>
   </div>
 
   <div class="actions">
-    <%= form.submit id: :submit_button %>
+    <%= form.submit id: :submit_button, class: "btn btn-default" %>
   </div>
 <% end %>
