--- a/app/views/products/_new_comment.html.erb
+++ b/app/views/products/_new_comment.html.erb
@@ -1,15 +1,17 @@
 <% if signed_in? %>
-  <h4>Add a review:</h4>
+  <h4 id="comment-header" class="comment-text">Add a review:</h4>
   <%= form_for([@product, @product.comments.build]) do |f| %>
-    <p>
+    <div class="field">
+      <div class="form-group">
       <%= f.label :body, "Comments" %><br>
-      <%= f.text_area :body %>
-    </p>
+      <%= f.text_area :body, class: "form-control" %>
+      </div>
+    </div>
     <p>
       <div class="rating"></div>
     </p>
     <p>
-      <%= f.submit "Submit" %>
+      <%= f.submit "Submit", class: "btn btn-default" %>
     </p>
   <% end %>
 <% end %>
