--- a/app/views/simple_pages/contact.html.erb
+++ b/app/views/simple_pages/contact.html.erb
@@ -9,16 +9,16 @@
 <div class="row">
   <div class="form-group">
     <%= form.label :name %>
-    <%= form.text_field :name, class: "form-control", placeholder: "Enter Name" %>
+    <%= form.text_field :name, class: "form-control", placeholder: "Enter Name", required: true %>
   </div>
   <div class="form-group">
     <%= form.label :email %>
-    <%= form.text_field :email, class: "form-control", placeholder: "Enter Email" %>
+    <%= form.text_field :email, class: "form-control", placeholder: "Enter Email", required: true %>
   </div>
   <div class="form-group">
     <%= form.label :message %>
-    <%= form.text_area :message, class: "form-control", placeholder: "Enter Message", rows: 5 %>
+    <%= form.text_area :message, class: "form-control", placeholder: "Enter Message", rows: 5, required: true %>
   </div>
 </div>
-<%= form.submit "Send", class: "form_label" %>
+<%= form.submit "Send", class: "btn btn-default" %>
 <% end %>
