--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -26,6 +26,6 @@
   </div>
 
   <div class="actions">
-    <%= form.submit, class: "btn btn-default" %>
+    <%= form.submit "Update User", class: "btn btn-default"%>
   </div>
 <% end %>
