--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -29,6 +29,12 @@
 
 <p>Average Rating: <div class="rated" data-score="<%= @product.average_rating %>"></div> </p>
 
+<p>
+  <%= form_with(url: '/payments/create') do |form| %>
+    <%= render partial: "shared/stripe_checkout_button" %>
+  <% end %>
+</p>
+
 <%= link_to 'Edit', edit_product_path(@product) %> |
 <%= link_to 'Back', products_path %>
 
