--- a/app/assets/javascripts/site.js.erb
+++ b/app/assets/javascripts/site.js.erb
@@ -1,4 +1,6 @@
 $(document).on('turbolinks:load', function(){
+  $(".img-zoom").elevateZoom();
+
   $('.rating').raty({
     starHalf: '<%= asset_path "star-half.png" %>',
     starOff: '<%= asset_path "star-off.png" %>',
