--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,6 +11,10 @@
     <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
 
+    <script  type="text/javascript" src="jquery.js"></script>
+
+    <script src="jquery.elevatezoom.js" type="text/javascript"></script>
+
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <%= csrf_meta_tags %>
   </head>
@@ -65,7 +69,7 @@
     <% if notice %>
       <p id="notice" class="alert alert-info"><%= notice %></p>
     <% end %>
-    
+
     <% if alert %>
       <p id="alert" class="alert alert-info"><%= alert %></p>
     <% end %>
