--- a/app/assets/javascripts/site.js.erb
+++ b/app/assets/javascripts/site.js.erb
@@ -1,6 +1,4 @@
-$(document).on('turbolinks:load', function(){
-  $(".img-zoom").elevateZoom();
-
+var refreshRating = function() {
   $('.rating').raty({
     starHalf: '<%= asset_path "star-half.png" %>',
     starOff: '<%= asset_path "star-off.png" %>',
@@ -17,4 +15,10 @@ $(document).on('turbolinks:load', function(){
       return $(this).attr('data-score');
     }
   });
+};
+
+$(document).on('turbolinks:load ajaxSuccess', function() {
+  refreshRating();
+
+  $(".img-zoom").elevateZoom();
 });
