--- a/app/views/products/_new_comment.html.erb
+++ b/app/views/products/_new_comment.html.erb
@@ -1,6 +1,6 @@
 <% if signed_in? %>
   <h4 id="comment-header" class="comment-text">Add a review:</h4>
-  <%= form_for([@product, @product.comments.build]) do |f| %>
+  <%= form_for([@product, @product.comments.build], remote: true) do |f| %>
     <div class="field">
       <div class="form-group">
       <%= f.label :body, "Comments" %><br>
