--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -2,30 +2,32 @@
 
 <p id="notice"><%= notice %></p>
 
-<p>
-  <strong>Name:</strong>
-  <%= @product.name %>
-</p>
+<% cache @product do %>
+  <p>
+    <strong>Name:</strong>
+    <%= @product.name %>
+  </p>
 
-<p>
-  <strong>Description:</strong>
-  <%= @product.description %>
-</p>
+  <p>
+    <strong>Description:</strong>
+    <%= @product.description %>
+  </p>
 
-<p>
-  <strong>Image url:</strong>
-  <%= image_tag(@product.image_url, class: "img-responsive img-zoom", width: "500", data_zoom_images:@product.image_url) %>
-</p>
+  <p>
+    <strong>Image url:</strong>
+    <%= image_tag(@product.image_url, class: "img-responsive img-zoom", width: "500", data_zoom_images:@product.image_url) %>
+  </p>
 
-<p>
-  <strong>Color:</strong>
-  <%= @product.color %>
-</p>
+  <p>
+    <strong>Color:</strong>
+    <%= @product.color %>
+  </p>
 
-<p>
-  <strong>Price:</strong>
-  <%= @product.price %>
-</p>
+  <p>
+    <strong>Price:</strong>
+    <%= @product.price %>
+  </p>
+<% end %>
 
 <p>Average Rating: <div class="rated" data-score="<%= @product.average_rating %>" id="average-rating"></div> </p>
 
