--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -43,5 +43,7 @@
 
 <%= @product.highest_rating_comment %>
 <%= @product.lowest_rating_comment %>
+
+<div class="alert alert-info" style="display:none" role="alert">A new comment was posted!</div>
 <%= render 'new_comment' %>
 <%= render 'comments' %>
