--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -2,41 +2,49 @@
 
 <p id="notice"><%= notice %></p>
 
-<% cache @product do %>
-  <p>
-    <strong>Name:</strong>
-    <%= @product.name %>
-  </p>
+<div class="container-fluid">
+  <div class="row" data-product-id="<%= @product.id %>">
+    <div class="col-md-6">
+      <p>
+        <strong>Image url:</strong>
+        <%= image_tag(@product.image_url, class: "img-responsive img-zoom", width: "500", data_zoom_images:@product.image_url) %>
+      </p>
+    </div>
 
-  <p>
-    <strong>Description:</strong>
-    <%= @product.description %>
-  </p>
+    <div class="col-md-6">
+      <% cache @product do %>
+        <p>
+          <strong>Name:</strong>
+          <%= @product.name %>
+        </p>
 
-  <p>
-    <strong>Image url:</strong>
-    <%= image_tag(@product.image_url, class: "img-responsive img-zoom", width: "500", data_zoom_images:@product.image_url) %>
-  </p>
+        <p>
+          <strong>Description:</strong>
+          <%= @product.description %>
+        </p>
 
-  <p>
-    <strong>Color:</strong>
-    <%= @product.color %>
-  </p>
+        <p>
+          <strong>Color:</strong>
+          <%= @product.color %>
+        </p>
 
-  <p>
-    <strong>Price:</strong>
-    <%= @product.price %>
-  </p>
-<% end %>
+        <p>
+          <strong>Price:</strong>
+          <%= @product.price %>
+        </p>
+      <% end %>
 
-<p>Average Rating: <div class="rated" data-score="<%= @product.average_rating %>" id="average-rating"></div> </p>
+      <p>Average Rating: <div class="rated" data-score="<%= @product.average_rating %>" id="average-rating"></div> </p>
 
-<p>
-  <%= form_with(url: '/payments/create') do |form| %>
-    <%= render partial: "shared/stripe_checkout_button" %>
-    <%= hidden_field_tag(:product_id, @product.id) %>
-  <% end %>
-</p>
+      <p>
+        <%= form_with(url: '/payments/create') do |form| %>
+          <%= render partial: "shared/stripe_checkout_button" %>
+          <%= hidden_field_tag(:product_id, @product.id) %>
+        <% end %>
+      </p>
+    </div>
+  </div>
+</div>
 
 <%= link_to 'Edit', edit_product_path(@product) %> |
 <%= link_to 'Back', products_path %>
