--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -50,10 +50,12 @@
   <span class="badge badge-pill badge_warning">
     <%= @product.views %>
   </span>
-<h6>Latest reviewer:&nbsp;&ndsp;</h6>
+<h6>Latest reviewer:</h6>
   <span class="badge badge-pill badge_warning">
     <%= @product.get_recent_reviewer %>
   </span>
+
+<br>
 
 <%= link_to 'Edit', edit_product_path(@product) %> |
 <%= link_to 'Back', products_path %>
