--- a/app/assets/stylesheets/simple_pages.scss
+++ b/app/assets/stylesheets/simple_pages.scss
@@ -9,6 +9,14 @@ h1 {
 }
 
 /**** Navbar ****/
+.navbar-nav {
+  color: lightblue;
+}
+
+.pull-right {
+  background-color: lightblue;
+}
+
 .site-name {
   font-family: Aclonica, sans-serif;
   font-size: 30px;
