add important to color

--- a/app/assets/stylesheets/simple_pages.scss
+++ b/app/assets/stylesheets/simple_pages.scss
@@ -10,11 +10,11 @@ h1 {
 
 /**** Navbar ****/
 .navbar-nav {
-  color: lightblue;
+  color: lightblue !important;
 }
 
 #login-button {
-  background-color: lightblue;
+  background-color: lightblue !important;
 }
 
 .site-name {
